--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ letter-spacing: 0.06em;
 }
 
 .portfolio-title {
-    margin-top: 0;
+margin-top: 0;
 margin-bottom: 30px;
 color:#ffffff;
 
@@ -187,7 +187,7 @@ text-transform: uppercase;
 }
 .team-title {
 display: block;
-padding-top: 30px;
+margin-top: 30px;
 color: var(--title-text-color);
 
 font-weight: 500;
@@ -197,7 +197,7 @@ line-height: 1.19;
 }
 .team-text {
 display: block;
-padding-top:10px;
+margin-top:10px;
 font-size: 16px;
 line-height: 1.19;
 
