--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,6 @@ border-radius: 4px;
 color:var(--button-color);
 background-color: var(--accent-color);
 
-
 font-weight: 700;
 font-size: 16px;
 line-height: 1.9;
@@ -234,6 +233,7 @@ letter-spacing: 0.06em;
 .menu-filter button {
 background-color: #F5F4FA;
 color:#212121;
+cursor: pointer;
 
 }
 
