--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,9 @@ font-size: 16px;
 line-height: 1.19;
 
 }
+.reset-button {
+    border:0;
+}
 
 .button {
 display: inline-block;
@@ -221,9 +224,11 @@ line-height: 1.9;
 letter-spacing: 0.06em;
 
 }
+
 .button:hover, .button:focus {
 cursor: pointer;
 }
+
 .project-title {
 color:var(--title-text-color);
 font-weight: 700;
