--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,6 @@ text-align: center;
 Но если нужно можно создать отдельных класс   */
 h2 {
 color: var(--title-text-color);
-
 font-weight: 700;
 font-size: 36px;
 line-height: 1.17;
@@ -325,7 +324,6 @@ color: #ffffff;
 
 .feature-list, .box-list, .client-list, .team-list {
 display: flex;
-padding-top: 50px;
 }
 
 /* Классы одинаковые, можно прописать в одну строку */
@@ -357,17 +355,27 @@ margin-left: 30px;
 
 
 .box {
-    margin-top:94px;
+    padding-top:94px;
+    padding-bottom:94px;
     text-align: center;
-
 }
 
 .team {
-    margin-top:94px; 
+    padding-top:94px; 
+    padding-bottom:94px;
+    text-align: center;
+    background-color: #F5F4FA;
 
 }
 .feature {
-    margin-top:94px; 
+    padding-top:94px; 
+    padding-bottom:94px;
+}
+
+.portfolio {
+padding-top:94px; 
+padding-bottom:94px;
+
 }
 
 .container {
@@ -376,8 +384,8 @@ margin-left: auto;
 margin-right: auto;
 padding-left: 15px;
 padding-right: 15px;
-padding-top: 94px;
-padding-bottom: 94px;
+/* padding-top: 94px;
+padding-bottom: 94px; */
 }
 .container-feature {
     width: 1200px;
@@ -402,6 +410,9 @@ width: calc((100% - 60px)/3);
 margin-left:30px;
 }
 
+.indent {
+    margin-bottom: 50px;
+}
 
 .client-list .items {
 min-width: 170px;
@@ -430,10 +441,10 @@ text-align: center;
     padding-bottom: 24px;
 
 }
-.team {
+/* .team {
     text-align: center;
     background-color: #F5F4FA;
-}
+} */
 
 .team-style {
     width: calc((100% - 90px)/4);
