--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,16 @@ padding:0;
 }
 /* Можно было сделать сброс по тегам, или еще проще подключить  reset.css */
 
+.visually-hidden {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+    padding:0 !important;
+    border:0 !important;
+    height: 1px !important; 
+    width: 1px !important; 
+    overflow: hidden;}
+    
 address {
 
     font-style: normal;  
